# xpeng-work

./: .gitignore  .gitmodules  CLAUDE.md  README.md  bootstrap.sh  lingxi-trigger.sh
.claude/: CLAUDE.md  (+1 more)
team/code/agents/train-sim-eval-agent/: .gitignore  CLAUDE.md  README.md  pyproject.toml
team/code/agents/train-sim-eval-agent/docs/: architecture-design.md  client-cli-setup.md  deployment-bench.md  development-guide.md  pre-deploy-testing.md  project-description-doc.md  xp5_simulation_build_guide.md
team/code/agents/train-sim-eval-agent/scripts/: tse-tmux.sh
team/code/agents/train-sim-eval-agent/tests/: test_activities.py  test_eval_report.py  test_models.py  test_repo.py  test_switches.py  test_workflow_replay.py
team/code/agents/train-sim-eval-agent/tse/: __init__.py  config.py  constants.py  errors.py  switches.py  worker.py
team/code/agents/train-sim-eval-agent/tse/activities/: __init__.py  build.py  evaluate.py  infra.py  monitor.py  report.py  submit.py
team/code/agents/train-sim-eval-agent/tse/cli/: __init__.py  client.py  main.py
team/code/agents/train-sim-eval-agent/tse/integrations/: __init__.py  bench.py  feishu.py  sim_cloud.py  simworld_tools.py
team/code/agents/train-sim-eval-agent/tse/models/: __init__.py  db.py  domain.py
team/code/agents/train-sim-eval-agent/tse/request/: __init__.py  builder.py
team/code/agents/train-sim-eval-agent/tse/server/: __init__.py  agentd.py  control_api.py
team/code/agents/train-sim-eval-agent/tse/store/: repo.py
team/code/agents/train-sim-eval-agent/tse/workflows/: __init__.py  experiment.py
(+2468 files in other folders)
