[project]
name = "train-sim-eval-agent"
version = "0.1.0"
description = "训练仿真评测闭环 Agent"
requires-python = ">=3.10"
# 两端共享的最小核心依赖（数据模型 / 配置）。
# 角色专属依赖见下方 optional-dependencies：客户端装 [client]，台架装 [server]。
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
# 瘦客户端（tse 命令）：只发 HTTP 请求，仅需 typer + httpx
client = ["typer>=0.12", "httpx>=0.27"]
# 台架服务端（tse-agentd：控制 API + Temporal Worker + 外部集成）
server = [
    "temporalio>=1.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",          # sim_cloud / control 客户端
    "lark-oapi>=1.2",       # 飞书：上传图片/文件 + 发送消息
    "requests>=2.28",       # simworld tools（log_downloader / eval_tasks_download）
]
ssh = ["fabric>=3.2"]
# 评测画图（FM 轨迹评测）所需重依赖，仅评测节点需要
eval = ["pandas>=2.0", "matplotlib>=3.7", "numpy>=1.24"]
# 开发/测试：跑全量测试需要服务端全套 + 评测依赖
dev = [
    "train-sim-eval-agent[client,server,eval]",
    "pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10",
]

[project.scripts]
tse = "tse.cli.main:app"               # 远程瘦客户端入口
tse-agentd = "tse.server.agentd:main"  # 台架常驻入口

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tse*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
